[metadata]
name = ncube-sdk
version = attr: ncube_sdk.__version__
author = N Cube Single Member Private Company
author_email = contact@n-cube.gr
description = N-cube Event Ingest SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ncubeanalytics/ncube-python/
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    ncube_sdk
python_requires = >=2.7
install_requires =
    requests<2.28

[options.packages.find]
where = src
